# PR_CODE

./: README.md  readme.txt
cross_adaboost/: CMakeLists.txt  main.cpp  predict.cpp  predict.h  read_data.cpp
knn/: CMakeLists.txt  main.cpp  read_data.cpp  read_data.h  test.cpp  tostring.h
svm/: CMakeLists.txt  main.cpp  tostring.cpp
